doc/de/chapters/compiler/03-01-ebnf.tex
%!TEX root=../Vorlage_DA.tex
%	########################################################
% 				EBNF
%	########################################################

\subsection{EBNF Syntax + Kontextbedingungen}

%	########################################################
% 				Startpoint
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
CMM	= { ( ConstDecl | StructDecl | VarDecl | ProcDecl ) }.
\end{lstlisting}
\begin{itemize}
  \item Es muss eine parameterlose void-Prozedur namens main() geben.
  \begin{itemize}
    \item main not found
    \item main is not declared as function
    \item function parameters not allowed for main function
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Constant Declaration
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
ConstDecl = "const" Type ident "=" 
  ( ( "true" | "false" ) 
    | intCon
    | floatCon
    | charCon
    | stringCon
  ) ";".
\end{lstlisting}
\begin{itemize}
  \item Der Typ von inCon, floatCon, charCon und stringCon muss gleich sein wie der Typ von Type.
  \begin{itemize}
    \item bool constant not allowed here
    \item int constant not allowed here
    \item float constant not allowed here
    \item char constant not allowed here
    \item string constant not allowed here
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Variable Declaration
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
VarDecl = Type ident [ "=" BinExpr ]
  { "," ident [ "=" BinExpr ] }
  ";".
\end{lstlisting}
\begin{itemize}
  \item Der Typ von Type muss ein primitive oder String sein, wenn eine Zuweisung stattfindet
  \begin{itemize}
    \item type is not a primitive or string
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Structure Declaration
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
StructDecl = "struct" ident "{" { VarDecl } "}" .
\end{lstlisting}
\begin{itemize}
  \item Die Struct-Deklaration darf nicht leer sein
  \begin{itemize}
    \item struct must contain at least one variable
  \end{itemize}
  \item Der Name des Struct-Typs darf nicht als Typ eines der Felder verwendet werden.
  \begin{itemize}
    \item TODO!!!!!!
  \end{itemize}
  \item Es darf keine Variablenzuweisung in der Struktur deklariert werden
  \begin{itemize}
    \item variable assigment is not allowed in struct
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Procedure Declaration
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
ProcDecl = ( Type | "void" )
  ident "(" [ FormPars ] ")"
  ( "{" 
    { ConstDecl 
    | VarDecl 
    | Statement 
    } "}" 
  | ";"
  ).
\end{lstlisting}
\begin{itemize}
  \item Wenn die Prozedur eine Funktion ist, muss sie mit return verlassen werden.
  \begin{itemize}
    \item TODO?????
  \end{itemize}
  \item Type muss ein primitiver Typ oder string sein.
  \begin{itemize}
    \item procedure must return a primitive type ,a string or is void
  \end{itemize}
  
  \item Zu jeder Forward-Deklaration muss es eine volle Prozedurdeklaration geben.
  \begin{itemize}
    \item <ident> has only a forward-declaration
  \end{itemize}
  \item Eine Forward-Deklaration muss die gleiche Signatur haben wie die später folgende volle Prozedurdeklaration, d.h. der Prozedurname, der Funktionstyp, die Anzahl der Parameter, die Parametertypen und die Parameterarten (ref oder nicht ref) müssen übereinstimmen.
  \begin{itemize}
    \item return value of forware declaration does not match declaration
    \item parameter of function and forward declaration has not the same type
    \item parameter of function or forward declaration is ref, in the other not
    \item forward-declaration of function has more parameter as function itself
    \item function has more parameters as forward-declaration declare
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				multible procedure parameters
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
FormPars = FormPar { "," FormPar }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				single procedure parameters
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
FormPar = Type [ "&" ] ident.
\end{lstlisting}
\begin{itemize}
  \item Type muss ein primitiver Typ oder string sein.
  \begin{itemize}
    \item var must be a primitive type or string
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Type declaration
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Type = ident { "[" intCon "]" }.
\end{lstlisting}
\begin{itemize}
  \item ident muss einen Typ bezeichnen.
  \begin{itemize}
    \item <ident> is not a type
  \end{itemize}
  \item intCon darf nicht 0 oder negativ sein.
  \begin{itemize}
    \item array-size must be 1 or higher
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Statement
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Statement = 
  ( Designator
    ( AssignOp BinExpr 
    | ActPars
    ) ";" 
  | "if" "(" Condition ")" Statement ["else" Statement ]
  | "while" "(" Condition ")" Statement
  | "do" Statement "while" "(" Condition ")" ";"
  | "switch" "(" BinExpr ")" "{" 
  	{ ( "case" ( intCon | floatCon | charCon )
  	  | "default" ) ":" { Statement } 
  	} "}"
  | "{" { Statement } "}"
  | "return" [BinExpr] ";"
  | "break" ";"
  | "continue" ";"
  | ";"
  ).
\end{lstlisting}
\begin{itemize}
  \item TODO, Kontextbedingungen weiterschreiben!!!!
  \item In einem switch/case muss der Typ von BinExpr gleich dem Type des case sein
  \begin{itemize}
    \item type of switch has to match type of case value
  \end{itemize}
  \item In einem switch/case darf eine case konstante jeweils nur einmal benutzt werden
  \begin{itemize}
    \item TODO!!!!!
  \end{itemize}
  \item In einem switch/case darf jeweils nur einmal default: vorkommen
  \begin{itemize}
    \item you cannot declare the default statement twice
  \end{itemize}
\end{itemize}
\end{samepage}

%	########################################################
% 				Assign Operator
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
AssignOp = ( "=" 
  | "+=" | "-=" | "*=" | "/=" | "%=" 
  | "<<=" | ">>=" 
  | "&=" | "^=" | "|=" 
  ). 
\end{lstlisting}
\end{samepage}

%	########################################################
% 				ActPars
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
ActPars = "(" [ ActPar { "," ActPar } ] ")".
\end{lstlisting}
\end{samepage}

%	########################################################
% 				ActPar
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
ActPar = ( BinExpr ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Condition
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Condition = CondTerm { "||" CondTerm }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				CondTerm
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
CondTerm = CondFact { "&&" CondFact }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				CondFact
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
CondFact = 
  ( BinExpr [ Relop BinExpr ] 
  | "!" "(" Condition ")" 
  | "(" Condition ")" 
  ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Relop
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Relop = ( "==" | "!=" | ">" | ">=" | "<" | "<=" ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				BinExpr
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
BinExpr = Shift { Binop Shift }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Shift
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Shift = Expr { Shiftop Expr }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Expression
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Expr = Term { Addop Term }.
\end{lstlisting}
\end{samepage}



%	########################################################
% 				Term
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Term = Factor { Mulop Factor }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Factor
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Factor = ( Designator [ ActPars ]
  | intCon
  | floatCon
  | charCon
  | stringCon
  | ("true"
    |"false"
    )
  | "-" Factor
  | "+" Factor
  | "~" Factor
  | "(" Type ")" Factor
  | "(" BinExpr ")"
  ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Designator
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Designator = ident { "." ident | "[" BinExpr "]" }.
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Binop
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Binop = ( "&" | "^" | "|" ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Shiftop
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Shiftop = ( "<<" | ">>" ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Addop
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Addop = ( "+" | "-" ).
\end{lstlisting}
\end{samepage}

%	########################################################
% 				Mulop
%	########################################################

\begin{samepage}
\begin{lstlisting}[language=EBNF]
Mulop = ( "*" | "/" | "%" ).
\end{lstlisting}
\end{samepage}
